Add: プロフィール編集機能を追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -67,4 +67,11 @@ ja:
       truncate: "..."
   profiles:
     show:
-      title: マイページ
+      title: 'プロフィール'
+      edit: '編集'
+    edit:
+      title: 'プロフィール編集'
+      update: '更新'
+    update:
+      success: 'プロフィールを更新しました'
+      fail: 'プロフィールの更新に失敗しました'
